test/expected/declare_prgi.out
declare p as pointer to register int
        ^
9: error: pointer to "register" is illegal
